add dot to assets

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -9,7 +9,7 @@
     <!-- Fancybox-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <!-- Общий файл стилей -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
