--- a/pages/index.html
+++ b/pages/index.html
@@ -7,8 +7,7 @@
     <!-- Bootstrap с CDN, заменить на битриксовый при подключении -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Общий файл стилей -->
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <base href="/Advocat/">
+    <link rel="stylesheet" href="/Advokat/assets/css/style.css">
 </head>
 <body>
 
